...
  font-size: 11px;
  text-align: right;
  margin-right: 10px;
`;

export default function App() {
  const userName = useSelector(getUserName);
  const steps = useSelector(getCurrentSteps);

  const dispatch = useDispatch();

  const handleShake = useCallback(() => {
    return dispatch(changeCountInit());
  }, [dispatch]);
...
